# cheatsh-qtcreator

./: .gitignore  .gitmodules  CMakeLists.txt  CheatSh.json  CheatSh.json.in  DEVELOP.md  Hakufile  INSTALL.md  LICENSE  Makefile  README.md  cheatfilter.cpp  cheatfilter.h  cheatoutputplane.cpp  cheatoutputplane.h  cheatsh.cpp  cheatsh.h  cheatsh.pro  cheatsh.qrc  cheatsh_global.h  cheatsh_ru.ts  cheatsh_unix.qrc  cheatshconstants.h  cheatshplugin.cpp  cheatshplugin.h  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  optionspage.cpp  optionspage.h  progressreport.cpp  progressreport.h  querymanager.cpp  querymanager.h  resources.qrc  settings.cpp  settings.h  updatechecker.cpp  updatechecker.h
.github/workflows/: build_cmake.yml  build_qmake.yml
i18n/: cheatsh_ru.ts  i18n.qrc
